fix: scrollbar not visible & drag me item causing overflow issue

--- a/my-Portfolio/src/index.css
+++ b/my-Portfolio/src/index.css
@@ -3,10 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  scroll-behavior: smooth;
-}
-
 body {
   background-color: black;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ffffffa1;
+  border-radius: 10rem;
 }
